<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

                <ImageView
                    android:id="@+id/logo_header1imgview"
                    android:layout_width="70dp"
                    android:layout_height="46dp"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="25dp"
                    android:contentDescription="@string/txt_tbl_header_logo_alt1"
                    android:src="@drawable/logo_header1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/txt_tbl_cal_items_news1"
                            android:textColor="#FFC730"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:paddingEnd="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_cal_items_following1"
                            android:textColor="#FFC730"
                            android:textSize="19sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:paddingEnd="10dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_cal_items_followers1"
                            android:textColor="#FFC730"
                            android:textSize="19sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF"
                        android:padding="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_title_news1"
                            android:textAllCaps="false"
                            android:textColor="#666666"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_title_following1"
                            android:textAllCaps="false"
                            android:textColor="#666666"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingStart="10dp"
                            android:text="@string/txt_tbl_title_followers1"
                            android:textAllCaps="false"
                            android:textColor="#666666"
                            android:textSize="12sp" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="8dp"
                        android:paddingEnd="10dp"
                        android:paddingLeft="25dp"
                        android:paddingRight="10dp"
                        android:paddingStart="25dp"
                        android:paddingTop="8dp"
                        android:text="@string/txt_tbl_header_headline1"
                        android:textColor="#000000"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutHeader"
            android:background="#3D3B3E"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:paddingStart="7dp"
                android:paddingTop="8dp"
                android:text="@string/txt_tabs_title4"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginTop="3dp"
                android:background="@android:color/holo_green_dark"></View>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutTabBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutTab"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="@string/intro_courtcounter_teama"
                    android:textColor="#DBC068"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:text="@string/txt_score_points0"
                    android:textColor="#F9A31B"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_a_rebounds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:text="@string/txt_rebounds_points0"
                    android:textColor="#EC425B"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/btn_score_points3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/btn_score_points2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneForTeamA"
                    android:text="@string/btn_score_points1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addReboundsForTeamA"
                    android:text="@string/btn_score_rebounds1"
                    android:textColor="#EC425B" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"></View>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:background="@android:color/darker_gray"></View>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:text="@string/intro_courtcounter_teamb"
                    android:textColor="#DBC068"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:text="@string/txt_score_points0"
                    android:textColor="#F9A31B"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/team_b_rebounds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="3dp"
                    android:text="@string/txt_rebounds_points0"
                    android:textColor="#EC425B"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/btn_score_points3" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/btn_score_points2" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addOneForTeamB"
                    android:text="@string/btn_score_points1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addReboundsForTeamB"
                    android:text="@string/btn_score_rebounds1"
                    android:textColor="#EC425B" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"></View>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:onClick="resetScore"
            android:text="@string/btn_courtcounter_reset1" />
    </RelativeLayout>
</ScrollView>
